Refactored some raspberry pi stuff.  Now discover speakers and add the info to a custom class to make the program more user friendly.

--- a/goRaspPiServer/package.json
+++ b/goRaspPiServer/package.json
@@ -5,12 +5,17 @@
     "bcrypt": "*",
     "body-parser": "*",
     "express": "*",
+    "http-auth": "*",
     "jwt-simple": "*",
+    "mocha": "*",
     "mongoose": "*",
     "morgan": "*",
     "passport": "*",
     "passport-jwt": "*",
-    "http-auth": "*",
+    "q": "^1.4.1",
     "sonos": "*"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0"
   }
 }
